--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,19 @@ __pycache__/level.cpython-310.pyc
 __pycache__/particles.cpython-310.pyc
 __pycache__/player.cpython-310.pyc
 __pycache__/settings.cpython-310.pyc
+__pycache__/enemy.cpython-310.pyc
+__pycache__/level.cpython-310.pyc
+__pycache__/particles.cpython-310.pyc
+__pycache__/player.cpython-310.pyc
+__pycache__/settings.cpython-310.pyc
+__pycache__/enemy.cpython-310.pyc
+__pycache__/level.cpython-310.pyc
+__pycache__/particles.cpython-310.pyc
+__pycache__/player.cpython-310.pyc
+__pycache__/settings.cpython-310.pyc
+__pycache__/enemy.cpython-310.pyc
+__pycache__/level.cpython-310.pyc
+__pycache__/particles.cpython-310.pyc
+__pycache__/player.cpython-310.pyc
+__pycache__/settings.cpython-310.pyc
+__pycache__/ui.cpython-310.pyc
